--- a/DivaWorkshop/SlidesDivaLecce2016/DivaLecce2016_diva4D.tex
+++ b/DivaWorkshop/SlidesDivaLecce2016/DivaLecce2016_diva4D.tex
@@ -1,10 +1,10 @@
 \input{GHERheader2015.tex}
 \parindent 0cm
 
-\author[Alexander Barth, Aida Alvera-Azc\'{a}rate, Mohamed~Ouberdous, Charles~Troupin, Sylvain~Watelet \& Jean-Marie~Beckers]{Alexander Barth, Aida Alvera-Azc\'{a}rate, Mohamed~Ouberdous,\\
- Charles~Troupin, Sylvain~Watelet \& Jean-Marie~Beckers}
+\author[Alexander Barth, Aida Alvera-Azc\'{a}rate, Mohamed~Ouberdous, Charles~Troupin, Sylvain~Watelet \& Jean-Marie~Beckers]{Sylvain~Watelet, Alexander Barth, Aida Alvera-Azc\'{a}rate, Mohamed~Ouberdous,\\
+ Charles~Troupin, \& Jean-Marie~Beckers}
   
-\title[]{\diva workshop 2015}
+\title[]{\diva Lecce 2016}
 \subtitle{\diva in 4 dimensions (GODIVA)}
 \date{}
 \begin{document}
@@ -35,7 +35,7 @@
 \begin{frame}[c]
 \frametitle{Installation}
 \huge
-See Tutorial on installation \href{run:./DivaWorkshop2015_installation.pdf}{\important{(pdf)}}
+See Tutorial on installation or User Guide \url{http://modb.oce.ulg.ac.be/mediawiki/index.php/Diva_documents} %\href{run:./DivaWorkshop2015_installation.pdf}{\important{(pdf)}}
 
 
 \end{frame}
@@ -1074,6 +1074,38 @@ Results will be stored in \directory{output/3Danalysis} directory.
 \end{figure}
 
 \end{columns}
+
+\end{frame}
+
+
+
+\begin{frame}[allowframebreaks]
+\frametitle{Propagation of the information}
+
+\centerline{\includegraphics[width=.7\linewidth]{land_sea_decoupling1D}}
+
+
+\begin{itemize}
+\item First 1D, green: land points, everything else: sea point
+\item Weights of the discretized Laplacian (in finite difference)
+\item Laplacian cannot be computed at the land boundary
+\item If 3 consecutive (sea) values are equal $\rightarrow$ Laplacian = 0
+\item Laplacian constrain (and the gradient constrain) forces that every values is close to its right and left neighbor
+\item This contrain is effecive everywhere except near the boundary
+\item The Laplacian couples directly every grid point with its two neighbors,
+\item Indirect coupling: two grid points that are separated by some distance as long as they are not separated by land
+\item The result is that value of the analysis at the two blue points must be close to each other
+\item However, this is not the case of the blue points and the red point
+\end{itemize}
+
+
+\centerline{\includegraphics[width=.7\linewidth]{land_sea_decoupling}}
+
+\begin{itemize}
+\item In two dimensions, essentially the same procedure.
+\item Laplacian couples the field in both spatial directions.
+\item DIVA works on a triangular mesh with finite elements, but this basic properties also apply
+\end{itemize}
 
 \end{frame}
 
