--- a/DivaWorkshop/SlidesDivaLecce2016/DivaLecce2016_installation.tex
+++ b/DivaWorkshop/SlidesDivaLecce2016/DivaLecce2016_installation.tex
@@ -4,7 +4,7 @@
 \author[Alexander Barth, Aida Alvera-Azc\'{a}rate, Mohamed~Ouberdous, ctroupin~Troupin, Sylvain~Watelet \& Jean-Marie~Beckers]{Alexander Barth, Aida Alvera-Azc\'{a}rate, Mohamed~Ouberdous,\\
  ctroupin~Troupin, Sylvain~Watelet \& Jean-Marie~Beckers}
   
-\title[]{\diva workshop 2015}
+\title[]{\diva Lecce 2016}
 \subtitle{Installation and tests}
 \date{}
 \begin{document}
