--- a/DivaWorkshop/SlidesDivaLecce2016/DivaLecce2016_new_developments.tex
+++ b/DivaWorkshop/SlidesDivaLecce2016/DivaLecce2016_new_developments.tex
@@ -1,10 +1,10 @@
-\input{GHERheader2014.tex}
+\input{GHERheader2015.tex}
 \parindent 0cm
 
 \author[Alexander Barth, Aida Alvera-Azc\'{a}rate, Mohamed~Ouberdous, Charles~Troupin, Sylvain~Watelet \& Jean-Marie~Beckers]{Alexander Barth, Aida Alvera-Azc\'{a}rate, Mohamed~Ouberdous,\\
  Charles~Troupin, Sylvain~Watelet \& Jean-Marie~Beckers}
   
-\title[]{\diva workshop 2014}
+\title[]{\diva Lecce 2016}
 \subtitle{New developments}
 \date{}
 \begin{document}
@@ -772,12 +772,12 @@ $\rightarrow$ also included in the divaonedepthODV4 script
   \pause
   \includegraphics[scale=0.07]{./figures/HK_Central_IFC_Mall_lunch_time_shop_GODIVA_Belgium_1926_sign_April-2012.JPG}
   ~\\
-   ... with chocolates.
+   ... if you feed them with chocolates.
 \end{frame}
 % -------------------------------------------------------------------------------------------------------------------------------------
 
 \begin{frame}[t]
-\frametitle{Releases: 4.7.1 -- expected December 2014}
+\frametitle{Future ideas}
 
 
 
@@ -801,15 +801,16 @@ Beta testers \ldots
 \onslide*<4>{
 \footnotesize depending on the problem type and size
  }
-\item<5-> Retrieval of topographies from \diva-on-web 
+\item<5-> Retrieval of topographies from \diva-on-web \textcolor{green}{OK}
 \item<6-> Improved version of the almost exact error calculation\\
- with boundary effects
+ with boundary effects \textcolor{green}{OK}
 \item<7-> Incorporation of metadata \\
 \onslide*<7>{
 \footnotesize (EDMO-CDI identifier, space-time location)\\
  into 4D NetCDF files of climatologies
  }
-\item<8-> Update of divadoxml with new template and graphic user interface (see other presentation)
+\item<8-> Update of divadoxml with new template and graphic user interface \textcolor{green}{OK}
+\item<9-> Topo from EMODnet bathymetry \textcolor{orange}{very soon}
 \end{itemize}
 
 \end{frame}
